fixes mobile banner and align title to counter (#169)

--- a/src/styles/components/gallery/_gallery.scss
+++ b/src/styles/components/gallery/_gallery.scss
@@ -213,6 +213,7 @@
 
             @media #{$medium-up} {
                 padding-bottom: 20px;
+                padding-left: 30px;
             }
 
             @media #{$large-up} {
